plugins {
    id 'java'
    id 'signing'
    id 'maven-publish'
    id 'net.ltgt.errorprone' version '5.1.0'
    id("com.vanniktech.maven.publish") version "0.37.0"
}

group = 'io.github.greymagic27'
version = '1.0.0'

repositories {
    mavenCentral()
}

mavenPublishing {
    publishToMavenCentral()
    signAllPublications()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(26))
    }
}

dependencies {
    errorprone 'com.google.errorprone:error_prone_core:2.50.0'
    compileOnly 'org.jspecify:jspecify:1.0.0'
    implementation 'com.google.errorprone:error_prone_annotations:2.50.0'
    testImplementation platform('org.junit:junit-bom:6.1.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

tasks.withType(Test).configureEach {
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('-Xlint:deprecation')
    //noinspection GrUnresolvedAccess
    options.errorprone.disable('NoCanIgnoreReturnValueOnClasses')
}
tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-native-access=ALL-UNNAMED'
}
tasks.javadoc {
    include("io/github/greymagic27/jna_clone/platform/**")
    include("io/github/greymagic27/jna_clone/WinDef.java")
    include("io/github/greymagic27/jna_clone/WinNT.java")
    include("io/github/greymagic27/jna_clone/methods/**")
}
tasks.withType(Javadoc).configureEach {
    options.addStringOption("Xdoclint:-missing", "-quiet")
}
tasks.named("build") {
    dependsOn("publishToMavenLocal")
}
tasks.named("check") {
    dependsOn("publishToMavenLocal")
}
tasks.named("test") {
    dependsOn("publishToMavenLocal")
}
mavenPublishing {
    coordinates(group, "win_method", version)

    pom {
        name = "WinMerge"
        description = "Custom JNA like bindings using pure Java"
        inceptionYear = "2026"
        url = "https://github.com/Greymagic27/WinMethod"
        licenses {
            license {
                name = "The Apache License, Version 2.0"
                url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                distribution = "http://www.apache.org/licenses/LICENSE-2.0.txt"
            }
        }
        developers {
            developer {
                id = "Greymagic27"
                name = "Greymagic27"
                url = "https://github.com/Greymagic27/WinMethod"
            }
        }
        scm {
            url = "https://github.com/username/WinMethod/"
            connection = "scm:git:git://github.com/greymagic27/WinMethod.git"
            developerConnection = "scm:git:ssh://git@github.com/greymagic27/WinMethod.git"
        }
    }
}